nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kilo
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx
